taskPage added fixes (scrollbar was hidden)

--- a/client/page/TaskPage/TaskPage.css
+++ b/client/page/TaskPage/TaskPage.css
@@ -186,8 +186,9 @@ body::-webkit-scrollbar {
   background: #FFFCFC;
   border-radius: 10px;
   padding: 20px;
-  width: auto;
+
 }
+
 .task_cheklist {
   background: #FFFCFC;
   border-radius: 10px;
